--- a/login.html
+++ b/login.html
@@ -1,58 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>微电影管理系统</title>
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="shortcut icon" href="{{ url_for('static',filename='base/images/logo.png')}}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='admin/bootstrap/css/bootstrap.min.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='fonts/css/font-awesome.min.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='ionicons/css/ionicons.min.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='admin/dist/css/AdminLTE.min.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='admin/plugins/iCheck/square/blue.css')}}">
+    <meta charset="UTF-8">
+    <title>login&register</title>
+    <link rel="stylesheet" href="css/login.css">
 </head>
-<body class="hold-transition login-page">
-<div class="login-box">
-    <div class="login-logo">
-        <a href=""><b>微电影管理系统</b></a>
-    </div>
-    <div class="login-box-body">
-        {% for msg in get_flashed_messages() %}
-        <p class="login-box-msg" style="color:red">{{ msg }}</p>
-        {% endfor %}
-        <form method="post" id="form-data">
-            <div class="form-group has-feedback">
-                {{form.account}}
-                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-                {% for err in form.account.errors %}
-                <div class="col-md-12" id="input_user">
-                    <font style="color:red">{{ err }}</font>
-                </div>
-                {% endfor %}
+<body>
+<button id="profile" onclick="loginAppear()">登录</button>
+<div id="loginBox">
+    <img src="images/hamburger-active.png" alt="" onclick="loginDisappear()">
+    <div id="loginshadow"></div>
+        <div id="login">
+            <div>
+                <img src="images/footer-logo.png" alt="">
+                <h4>WELCOME TO CHOCOLATIER</h4>
             </div>
-            <div class="form-group has-feedback">
-               {{form.pwd}}
-                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                {% for err in form.pwd.errors %}
-                <div class="col-md-12" id="input_pwd">
-                    <font style="color:red">{{ err }}</font>
-                </div>
-                {% endfor %}
+            <form action="login.do" method="post">
+                <br><br>
+                <input type="text" name="username" placeholder="请输入用户名" class="username">
+                <h6> </h6>
+                <input type="password" name="userpwd" placeholder="请输入密码" class="userpwd">
+                <h6 id="loginResult"> </h6>
+                <input type="button" value="登录" class="button" onclick="userLogin()">
+                <h5 onclick="regisTurn()">没有账号?点击注册</h5>
+            </form>
+        </div>
+        <div id="regis">
+            <div>
+                <img src="images/footer-logo.png" alt="">
+                <h4>WELCOME TO CHOCOLATIER</h4>
             </div>
-            <div class="row">
-                <div class="col-xs-8">
-                </div>
-                <div class="col-xs-4">
-                    {{form.submit}}
-                    {{form.csrf_token}}
-                </div>
-            </div>
-        </form>
-    </div>
+            <form action="regis.do" method="post">
+                <br><br>
+                <input type="text" name="username" placeholder="请输入用户名" class="username" onblur="usernameCheck()">
+                <h6 id="nameResult"> </h6>
+                <input type="password" name="userpwd" placeholder="请输入密码" class="userpwd">
+                <h6 id="regisResult"> </h6>
+                <input type="button" value="注册" class="button" onclick="userRegis()">
+                <h5 onclick="loginTurn()">已有账号?点击登录</h5>
+            </form>
+        </div>
 </div>
-<script src="{{ url_for('static',filename='admin/plugins/jQuery/jQuery-2.2.0.min.js')}}"></script>
-<script src="{{ url_for('static',filename='admin/bootstrap/js/bootstrap.min.js')}}"></script>
-<script src="{{ url_for('static',filename='admin/plugins/iCheck/icheck.min.js')}}"></script>
+<script src="js/login.js"></script>
 </body>
 </html>
